---
source: crates/pixi_manifest/src/manifests/workspace.rs
expression: "toml_edit::de::from_str::<WorkspaceManifest>(&contents).expect(\"parsing should succeed!\").default_feature().targets.default().pypi_dependencies.clone().into_iter().flat_map(|d|\nd.into_iter()).map(|(name, spec)|\nformat!(\"{} = {}\", name.as_source(), toml_edit::Value::from(spec))).join(\"\\n\")"
---
foo = ">=3.12"
bar = { version = ">=3.12", extras = ["baz"] }
